Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -1563,6 +1563,12 @@ i, .btn .show-max {
     height: 28px !important;
     margin: -8px 3px -5px 2px !important;
 }
+.msg-frame .icon-block-img img{
+    line-height: 100%;
+    margin: 0 !important;
+    max-width: 100px;
+    border-radius: 0 !important;
+}
 .icon-block-xs img{
     line-height: 100%;
     width: 24px !important;
